# plover_Japanese_Shark

./: README.md  setup.cfg
plover_Japanese_Shark/: system.py
plover_Japanese_Shark/dictionaries/: Plover_Japanese_Shark_Roma.py  abbreviation_for_Shark.json  commands_for_Shark.json
