[metadata]
name = plover_Japanese_Shark
version = 0.0.1
description = none
long_description = file: README.md
long_description_content_type = text/markdown
author = JEEBIS27
license = No license
url =https://github.com/JEEBIS27/plover_Japanese_Shark
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
                 plover>=4.0.0.dev12
packages =
	plover_Japanese_Shark

[options.entry_points]
plover.system = 
 plover_Japanese_Shark = plover_Japanese_Shark.system